--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,61 @@
-/* Reset and global styles */
 body,
 h1,
 h2,
 p,
 a {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    line-height: 1.6;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 1.3;
+}
+
+h2 {
+    font-size: 28px;
+    line-height: 1.4;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* Container */
 .container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 50px;
+  margin-bottom: 40px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a consistent box-shadow */
 }
 
 /* Header */
-.header {
-  text-align: center;
-  padding-top: 50px;
+.container-header {
+  background-color: #333;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a consistent box-shadow */
+  transition: transform 0.3s ease;
+}
+.container-header:hover {
+  transform: translateY(5px);
+}
+/* Fix the header at the top */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #333;
+  z-index: 100;
 }
 
 .heading {
@@ -56,10 +87,10 @@ body {
   text-align: justify;
 }
 
-/* CTA Section */
-.cta-section {
+/* Add padding to content to offset the fixed header */
+.content {
+  padding-top: 100px; /* Adjust the value as needed */
   text-align: center;
-  padding: 50px 0;
 }
 
 /* Button */
@@ -105,39 +136,23 @@ body {
 /* Logo Container */
 .logo-container {
   text-align: center;
-  background-color: #f2f2f2;
-  padding: 60px 0;
+  background-color: #333;
 }
 
 /* Main Logo */
 .main-logo {
   font-family: 'Bangers';
-  font-size: 96px;
-  color: #000000;
+  font-size: 70px;
+  color: #ffffff;
   text-transform: uppercase;
   line-height: 1;
-}
-
-.kire,
-.visual,
-.designers {
-  display: inline-block;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.main-logo:hover .kire,
-.main-logo:hover .visual,
-.main-logo:hover .designers {
-  opacity: 1;
 }
 
 /* Slogan */
 .slogan {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
-  color: #666666;
-  margin-top: 20px;
+  color: #ffffff;
   animation: fade-in 1s ease-in-out infinite alternate;
 }
 
