--- a/contato-kvd/contato.css
+++ b/contato-kvd/contato.css
@@ -26,6 +26,7 @@ h2 {
 
 a {
     text-decoration: none;
+    color: #fff;
 }
 
 
@@ -169,13 +170,14 @@ nav ul li a:hover {
 
 /* Footer */
 .footer {
-    top: 0;
-    left: 0;
-    right: 0;
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-text {
