--- a/styles.css
+++ b/styles.css
@@ -117,13 +117,14 @@ header {
 
 /* Footer */
 .footer {
-  top: 0;
-  left: 0;
-  right: 0;
   background-color: #333;
   color: #fff;
   padding: 20px;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer-text {
