Atualização 14/11/2023: Gradiente e Projetos

--- a/contato-kvd/contato.css
+++ b/contato-kvd/contato.css
@@ -167,10 +167,26 @@ nav ul li a:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a consistent box-shadow */
 }
 
+.background-gradient {
+    background: linear-gradient(45deg, #df6666, #947ed4, #947ed4, #df7777, #df6666);
+    background-size: 200% 200%;
+    animation: gradientAnimation 40s linear infinite;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 
 /* Footer */
 .footer {
-    background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
