--- a/pag-loja/stylesPag.css
+++ b/pag-loja/stylesPag.css
@@ -29,6 +29,23 @@ a {
     color: #fff;
 }
 
+.background-gradient {
+    background: linear-gradient(45deg, #df6666, #947ed4, #947ed4, #df7777, #df6666);
+    background-size: 200% 200%;
+    animation: gradientAnimation 40s linear infinite;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 /* Highlight */
 .highlight {
     background-color: #4CAF50;
