--- a/projetos-kvd/projetos.css
+++ b/projetos-kvd/projetos.css
@@ -29,6 +29,23 @@ a {
     color: #fff;
 }
 
+.background-gradient {
+    background: linear-gradient(45deg, #df6666, #947ed4, #947ed4, #df7777, #df6666);
+    background-size: 200% 200%;
+    animation: gradientAnimation 40s linear infinite;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 /* Highlight */
 .highlight {
     background-color: #4CAF50;
@@ -192,31 +209,26 @@ nav ul li a:hover {
 }
 
 
-.box-img {
-    position: relative;
-}
-
-.img-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 50%;
+.grid-img {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
+  }
+  .boxImg {
+    padding: 20px;
+  }
+  
+  .boxImg-content {
     display: flex;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.img-sequence {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    object-fit: contain;
-}
-
-.img-sequence:first-child {
-    opacity: 1;
-}
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .boxImg img {
+    width: 110%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
 
 /* Fade-in animation */
 .fade-in {
@@ -240,7 +252,6 @@ nav ul li a:hover {
 
 /* Footer */
 .footer {
-    background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
