--- a/contato-kvd/contato.css
+++ b/contato-kvd/contato.css
@@ -228,6 +228,7 @@ nav ul li a:hover {
 
 .contact label {
     display: block;
+    font-size: 20px;
     margin-bottom: 10px;
     font-weight: bold;
     
